# interpreter

./: .gitignore  Cargo.toml  test_program.test  todo.md
src/: bin.rs  diagnostics.rs  errors.rs  lib.rs  position.rs  reporting.rs  symbols.rs
src/ast/: mod.rs  monomorphised.rs  parsed.rs  resolved.rs  typed.rs
src/compiler/: alias_expansion.rs  builtins.rs  closure_fix.rs  compilation.rs  def_grouping.rs  kind_check.rs  mod.rs  monomorphisation.rs  precedence.rs  recursive_check.rs  resolve_symbols.rs  symbols.rs  trait_check.rs  type_check.rs  util.rs
src/compiler/builtins/: Basics.txt  Computation.txt  List.txt  Monad.txt  Option.txt  Result.txt  String.txt  mod.rs
src/diagnostics/: emitter.rs  mod.rs
src/parsing/: lexer.rs  mod.rs  parser.rs  tokens.rs
src/util/: errors.rs  mod.rs  symbols.rs
src/vm/: internal.rs  mod.rs
tests/: test_programs.rs
tests/programs/bad/checking/: mixed_associativity.test  non_associative_op.test  recursive_alias.test
tests/programs/bad/fixity/: mixed_associativity.test
tests/programs/bad/kind/: mismatch_in_impl.test  mismatched_kinds.test
tests/programs/bad/parse/: bad_list.test  bad_operator_section.test  bad_toplevel_indent.test  bad_tuple.test  bad_type_var.test  bad_union_tag.test  do_bind_last.test  do_if_last.test  do_let_last.test  misaligned_case.test  misaligned_let.test  mising_else.test  missing_def.test  no_module.test
tests/programs/bad/pattern/: missing_args.test
tests/programs/bad/symbol/: double_def.test  double_import.test  double_import_aliased.test  double_type_annot.test  missing_def.test  (+7 more)
(+39 files in other folders)
